# The-last-signal-

./: .fuse_hidden000000650000000a  .gitignore  README.md  Secure_save.py  Tests.py  admin_manager.py  banque.py  banque_save.json  calculateur.py  client-python.py  commande Linux.md  config.ini  configuration.py  dashboard.py  debugger.py  echecs.json  fuseaux_horaires.json  generate_map.py  gestionnaire.py  gestionnaire_de_fichiers.py  heure_locale.py  horloge.py  horloge_jeu.json  idée.txt  inv.py  inventaire.py  jet_de_des.py  joueurs.dill  main.py  objet.txt  objet_dispo.json  objet_dispo.txt  proba.py  requirements.txt  save.txt  setup.py  table_de_conversion.py  touches de commandes  touches_de_commandes  tresor.py  (+2 more)
.github/: dependabot.yml
Ancien/: Secure_save.py  banque_save.json  grade_manager.py  horloge.py  horloge_jeu.json  index_manager.py  indicateurs_telephoniques.json  localisation.py  table_de_conversion.py  taux de conversion des livres.txt  tresor.py
Gestion/: Shop_Economie_Jeu.xlsx  argent.xlsx  fichiersduJeu.xlsx  tableauThe last signal.xmind  trésor.xlsx  ~$trésor.xlsx
client-python/: client.py
client_python/: client.py  database.py  logger.py  main.py  packet.py
dashboard/: index.html
database/: ci_reports.db  client_logs.db  python_reports-18.db  python_reports-19.db  python_reports.db  recherche.py
docs/: 00_Index.md  01_GDD.md  CHANGELOG.md  CODING_RULES.md  CONTRIBUTING.md  README.md  (+4 more)
server_rust/: Cargo.toml
server_rust/src/: lib.rs  main.rs
server_rust/src/network/: client.rs  handler.rs  mod.rs  packet.rs  server.rs
(+830 files in other folders)
